--- a/stockchart/templates/layout.html
+++ b/stockchart/templates/layout.html
@@ -21,7 +21,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{{url_for('dashboard')}}">Dashboard</a>
+                <a class="nav-item nav-link" href="{{url_for('index')}}">Dashboard</a>
                 
               </div>
               <!-- Navbar Right Side -->
